@@ -1,3 +1,4 @@
+	Links removed to restricted people.
 	Restrictions added to edit, people, image & passthru based on session and person age
 	Added session.inc.php
 	css.inc.php changed to use favicon
